--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@eva-design/eva": "^2.1.1",
+    "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "^1.17.9",
     "@react-navigation/bottom-tabs": "^6.3.3",
     "@react-navigation/drawer": "^6.4.4",
@@ -33,11 +34,13 @@
     "@ui-kitten/date-fns": "^5.1.2",
     "@ui-kitten/eva-icons": "^5.1.2",
     "@ui-kitten/moment": "^5.1.2",
+    "axios": "^0.27.2",
     "date-fns": "^2.29.2",
     "expo": "~46.0.7",
     "expo-app-loading": "~2.1.0",
     "expo-asset": "~8.6.1",
     "expo-font": "~10.2.0",
+    "expo-image-picker": "~13.3.1",
     "expo-splash-screen": "~0.16.1",
     "expo-status-bar": "~1.4.0",
     "formik": "^2.2.9",
@@ -48,7 +51,9 @@
     "react-native": "0.69.5",
     "react-native-flash-message": "^0.3.1",
     "react-native-gesture-handler": "~2.5.0",
+    "react-native-image-picker": "^4.10.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-material-ui": "^1.30.1",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
