--- a/package.json
+++ b/package.json
@@ -48,16 +48,18 @@
     "moment": "^2.29.4",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-native": "0.69.5",
+    "react-native": "0.69.6",
     "react-native-flash-message": "^0.3.1",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-image-picker": "^4.10.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-material-ui": "^1.30.1",
+    "react-native-pager-view": "5.4.24",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-svg": "12.3.0",
+    "react-native-tab-view": "^3.1.1",
     "react-native-web": "~0.18.7",
     "react-redux": "^8.0.2",
     "redux-persist": "^6.0.0",
