post comments updates

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-native-gesture-handler": "~2.5.0",
     "react-native-image-picker": "^4.10.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-lightbox-v2": "^0.9.0",
     "react-native-material-ui": "^1.30.1",
     "react-native-pager-view": "5.4.24",
     "react-native-reanimated": "~2.9.1",
