--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "expo-image-picker": "~13.3.1",
     "expo-splash-screen": "~0.16.1",
     "expo-status-bar": "~1.4.0",
+    "expo-updates": "~0.14.6",
     "formik": "^2.2.9",
     "immutable": "^4.1.0",
     "moment": "^2.29.4",
