--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
     "react-native-flash-message": "^0.3.1",
+    "react-native-gesture-bottom-sheet": "^1.1.0",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-image-picker": "^4.10.0",
     "react-native-image-zoom-viewer": "^3.0.1",
@@ -58,6 +59,7 @@
     "react-native-material-ui": "^1.30.1",
     "react-native-pager-view": "5.4.24",
     "react-native-reanimated": "~2.9.1",
+    "react-native-root-toast": "^3.4.0",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-svg": "12.3.0",
