--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
+    "react-native-document-picker": "^8.1.2",
     "react-native-flash-message": "^0.3.1",
     "react-native-gesture-bottom-sheet": "^1.1.0",
     "react-native-gesture-handler": "~2.5.0",
@@ -62,12 +63,14 @@
     "react-native-root-toast": "^3.4.0",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
+    "react-native-super-grid": "^5.0.0",
     "react-native-svg": "12.3.0",
-    "react-native-tab-view": "^3.1.1",
+    "react-native-tab-view": "^3.3.2",
     "react-native-web": "~0.18.7",
     "react-redux": "^8.0.2",
     "redux-persist": "^6.0.0",
     "redux-persist-transform-immutable": "^5.0.0",
+    "rn-fetch-blob-v2": "^0.14.1",
     "validator": "^13.7.0"
   },
   "devDependencies": {
