--- a/package.json
+++ b/package.json
@@ -39,8 +39,10 @@
     "expo": "~46.0.7",
     "expo-app-loading": "~2.1.0",
     "expo-asset": "~8.6.1",
+    "expo-device": "^5.0.0",
     "expo-font": "~10.2.0",
     "expo-image-picker": "~13.3.1",
+    "expo-notifications": "^0.17.0",
     "expo-splash-screen": "~0.16.1",
     "expo-status-bar": "~1.4.0",
     "expo-updates": "~0.14.6",
