--- a/app.json
+++ b/app.json
@@ -29,7 +29,9 @@
       "fallbackToCacheTimeout": 0,
       "url": "https://u.expo.dev/ca36d396-e5cb-45ac-be5d-879e1ecf5ffb"
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "icon": "./assets/ic_stat_logo_fblanc_512.png",
       "supportsTablet": true
@@ -40,7 +42,10 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
       },
-      "permissions": ["android.permission.RECORD_AUDIO"]
+      "permissions": [
+        "android.permission.RECORD_AUDIO"
+      ],
+      "package": "com.theps.widenout"
     },
     "web": {
       "favicon": "./assets/favicon.png"
