--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "app",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "node_modules/expo/AppEntry.js",
   "author": {
     "name": "RNE"
@@ -40,19 +40,21 @@
     "expo": "~46.0.7",
     "expo-app-loading": "~2.1.0",
     "expo-asset": "~8.6.1",
-    "expo-device": "^5.0.0",
+    "expo-device": "~4.3.0",
     "expo-font": "~10.2.0",
     "expo-image-picker": "~13.3.1",
-    "expo-notifications": "^0.17.0",
+    "expo-notifications": "~0.16.1",
     "expo-splash-screen": "~0.16.1",
     "expo-status-bar": "~1.4.0",
     "expo-updates": "~0.14.6",
     "formik": "^2.2.9",
     "immutable": "^4.1.0",
+    "lottie-react-native": "5.1.3",
     "moment": "^2.29.4",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
+    "react-native-animated-loader": "^1.0.0",
     "react-native-document-picker": "^8.1.2",
     "react-native-flash-message": "^0.3.1",
     "react-native-gesture-bottom-sheet": "^1.1.0",
@@ -70,6 +72,7 @@
     "react-native-svg": "12.3.0",
     "react-native-tab-view": "^3.3.2",
     "react-native-web": "~0.18.7",
+    "react-native-webview": "11.23.0",
     "react-redux": "^8.0.2",
     "redux-persist": "^6.0.0",
     "redux-persist-transform-immutable": "^5.0.0",
